# akshar-ime

./: .gitignore  Cargo.toml  Makefile  README.md  devanagari-smart.xml  nepali-smart.xml
src/: c_api.rs  ibus_engine.c  learning.rs  lib.rs  persistence.rs
src/core/: context.rs  converter.rs  engine.rs  mod.rs  trie.rs  types.rs
src/fuzzy/: mod.rs  symspell.rs
