[package]
name = "nepali_smart_ime"
version = "1.0.0"
edition = "2021"
authors = ["Elite Systems Architect"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.10"
crossterm = "0.27" # For the simulator
serde_json = "1.0"
dirs = "5.0" 

# This section tells Cargo to build both a standard Rust library (rlib)
# and a C-compatible dynamic shared library (cdylib).
[lib]
name = "ime_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "ime_engine"
path = "src/bin/main.rs"

# For automatically generating the C header file
[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true