[package]
name = "nepali_smart_ime"
version = "1.0.0"
edition = "2021"
authors = ["Sabin"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tempfile = "3.10"
crossterm = "0.27"
libc = "0.2"
dirs = "5.0"
serde_json = "1.0"

[lib]
name = "nepali_smart_ime"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"